--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,17 +6,19 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
     "axios": "^1.4.0",
+    "clsx": "^2.0.0",
+    "jspdf": "^3.0.1",
+    "lucide-react": "^0.263.1",
+    "razorpay": "^2.9.6",
+    "react": "^18.2.0",
+    "react-datepicker": "^4.15.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
-    "react-hook-form": "^7.45.2",
-    "react-datepicker": "^4.15.0",
-    "lucide-react": "^0.263.1",
-    "clsx": "^2.0.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "tailwind-merge": "^1.14.0"
   },
   "scripts": {
@@ -26,16 +28,27 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
-    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.3",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24"
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.3"
   },
   "proxy": "http://localhost:5000"
 }
