--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
+    "express-session": "^1.18.1",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
+    "history": "^5.3.0",
     "html-pdf-node": "^1.0.7",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
@@ -26,6 +29,8 @@
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.17.1",
     "puppeteer": "^24.11.2",
     "razorpay": "^2.9.6"
