--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed": "node scripts/seedData.js",
-    "build": "cd frontend && npm install && npm run build".
+    "build": "cd frontend && npm install && npm run build",
     "postinstall": "npx puppeteer browsers install chrome"
   },
   "dependencies": {
