--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,5 +50,5 @@
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.3"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://127.0.0.1:5000"
 }
