--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed": "node scripts/seedData.js",
-    "build": "cd frontend && npm install && npm run build"
+    "build": "cd frontend && npm install && npm run build",
+    "install-chrome": "npx puppeteer browsers install chrome",
+    "prestart": "npm run install-chrome",
+    "postinstall": "npm run install-chrome"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
