--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,66 @@
+# Dependencies
 node_modules/
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build outputs
 dist/
 build/
+frontend/build/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+
+# Documentation (keep only README.md)
+*.md
+!README.md
+
+# Sensitive data
+*.csv
+*.key
+*.pem
+*.p12
+
+# Uploads folder (if contains user uploads)
+uploads/
+
+# Test coverage
+coverage/
+.nyc_output/
+
+# Next.js (if accidentally added)
+.next/
+out/
+
+# Misc
+.qodo/
